# CatFaceDetector

./: .gitignore  CMakeLists.txt  README.md
include/: darknet.h
src/: darknet.cpp  darknet.hpp  detector.cpp  detector.hpp  function.cpp  function.hpp  main.cpp  video.cpp  video.hpp
